--- a/flink-runtime/pom.xml
+++ b/flink-runtime/pom.xml
@@ -37,6 +37,11 @@ under the License.
 	<dependencies>
 
 		<!-- core dependencies -->
+		<dependency>
+			<groupId>gurobi</groupId>
+			<artifactId>gurobi-jar</artifactId>
+			<version>2.0.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.flink</groupId>
